--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
             <div class="nav-links"> 
                 <ul>
                     <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="{{ url_for('register') }}">Register</a></li>
+                    <li><a href="{{ url_for('home') }}">About Us</a></li>
                     <li><a href="{{ url_for('login') }}">Login</a></li>
                 </ul>
             </div>
@@ -31,6 +31,7 @@
 <!--------------------------------- commenting out
     <footer>
     </footer>
+    <li><a href="{{ url_for('register') }}">Register</a></li>
     ---------------------------------------------------------------->
 </body>
 
