--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -227,7 +227,7 @@ footer {
 }
 
 .login-page .btn:hover {
-    background: #289bb8;
+    background: #f8b229;
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px #289bb8,
@@ -282,13 +282,13 @@ footer {
     width: 400px;
     padding: 40px;
     transform: translate(-50%, -50%);
-    background: rgba(0, 0, 0, .5);
+    background: #2c6975;
     box-sizing: border-box;
     box-shadow: 0 15px 25px rgba(0, 0, 0, .6);
     border-radius: 10px;
 }
 
-.register-page input {
+.registration-page input {
     width: 100%;
     padding: 10px 0;
     font-size: 13px;
@@ -300,7 +300,7 @@ footer {
     background: transparent;
 }
 
-.register-page .btn {
+.registration-page .btn {
     position: relative;
     display: inline-block;
     padding: 10px 20px;
@@ -311,4 +311,41 @@ footer {
     transition: .5s;
     margin-top: 15px;
     letter-spacing: 2px
+}
+
+.registration-page .btn:hover {
+    background: #f8b229;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #289bb8,
+        0 0 25px #289bb8,
+        0 0 50px #289bb8,
+        0 0 100px #289bb8;
+}
+
+.registration-page .btn span {
+    position: absolute;
+    display: block;
+}
+
+.registration-page .btn span:nth-child(1) {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(90deg, transparent, #289bb8);
+    animation: btn-anim1 1s linear infinite;
+}
+
+/* Add the rest of the animation keyframes and styles here */
+
+@keyframes btn-anim1 {
+    0% {
+        left: -100%;
+    }
+
+    50%,
+    100% {
+        left: 100%;
+    }
 }
