--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -2,14 +2,16 @@
 
 {% block content %}
 <section class="hero">
-    <div class="row">
+    <div class="hero-col">
         <h1>Get Your Errands done Without Leaving Home</h1>
         <p>Connect with reliable Errand Masters in your Area</p>
         <a href="#hire" class="btn">Engage an Errand Pro</a>
     </div>
-    <div class="column">
+    <div class="hero-col">
         <img src="{{ url_for('static', filename='images/cover1.jpg') }}" alt="Example Image">
+    </div>
 </section>
+
 
 
 
