--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<header>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}TaskMate{% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</header>
-
+    <title>Document</title>
+</head>
 <body>
-    <section class="header">
-        <nav class="nav-bar">
-            <a href="{{ url_for('home')}}">TaskMate</a>
-            <div class="nav-links"> 
-                <ul>
-                    <li><a href="{{ url_for('home') }}">Home</a></li>
-                    <li><a href="{{ url_for('home') }}">About Us</a></li>
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                </ul>
-            </div>
-
-        </nav>
-    </section>
-   
-
-    {% block content %}
     
-    {% endblock %}
-
-<!--------------------------------- commenting out
-    <footer>
-    </footer>
-    <li><a href="{{ url_for('register') }}">Register</a></li>
-    ---------------------------------------------------------------->
 </body>
-
 </html>
